# serde-example

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/2019-03-15-210155_create-example-table/: down.sql  up.sql
src/: main.rs  schema.rs
