[package]
name = "serde-example"
version = "0.1.0"
authors = ["Jonathan Strong <jstrong@tioscapital.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1", features = ["mysql", "extras", "128-column-tables"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.4"
serde_yaml = "0.8"
